Fixed Create Your Journey Button

--- a/CreateTripNewUser.html
+++ b/CreateTripNewUser.html
@@ -59,9 +59,9 @@
             <div class="search-container-date">
                 <img class="search-from-icon" src="./img/calendar_clock.svg" alt="Distance Icon"/>
                 <label for="from">Date</label>
-                <input type="text" name="date" class="search-field" onfocus="(this.type='date')" placeholder="Add dates">
+                <input type="text" name="date" class="search-field" placeholder="Add dates">
             </div>
-            <button type="submit" class="search-button">Search</button>
+            <button type="submit" class="search-button">Create Your Journey</button>
         </form>
     </section>
     <img class="create-home-illustration" src="./img/Illustration.svg" alt="No journey planned, yet!"/>
