Add css for footer - last version

--- a/CreateTripNewUser.html
+++ b/CreateTripNewUser.html
@@ -121,20 +121,22 @@
                     <span class="footer-contact-follow">Follow Us</span>
                     <div class="footer-follow-wrapper">
                         <a href="https://www.instagram.com/" class="footer-follow-link">
-                            <img class="footer-follow-img" src="./img-journeys/instagram.svg" alt="Instagram Icon"/>
+                            <img class="footer-follow-img" src="./img/instagram.svg" alt="Instagram Icon"/>
                         </a>
                         <a href="https://www.facebook.com/" class="footer-follow-link">
-                            <img class="footer-follow-img" src="./img-journeys/facebook.svg" alt="Facebook Icon"/>
+                            <img class="footer-follow-img" src="./img/instagram.svg" alt="Facebook Icon"/>
                         </a>
                         <a href="https://twitter.com/?lang=en" class="footer-follow-link">
-                            <img class="footer-follow-img" src="./img-journeys/twitter.svg" alt="Twitter Icon"/>
+                            <img class="footer-follow-img" src="./img/instagram.svg" alt="Twitter Icon"/>
                         </a>
                     </div>
                 </div>    
             </div>
             <!-- Line element -->
-            <div class="footer-divider"></div>
-            <span class="footer-text">© 2024 getaway. All rights reserved.</span>
+            <div class="footer-divider">
+                <div class="footer-line"></div>
+                <span class="footer-text">© 2024 getaway. All rights reserved.</span>
+            </div>
         </footer>
     
     </section>
