Fixed some styles on journeys page

--- a/journeys.html
+++ b/journeys.html
@@ -15,18 +15,18 @@
 <body>
     <header class="header-container">
         <div class="header-left-elements">
-            <a class="header-home" href="#">
+            <a class="logo-section" href="#">
                 <img class="header-logo" src="./img-journeys/mode_of_travel.svg" alt="Logo"/>
-                getaway
+                <span class="logo-text">getaway</span>
             </a>
             <nav class="header-navbar-options">
-                <a href="#" class="header-nav-link" id="active-page">
+                <a href="#" class="header-nav-link active-page" >
                     <img class="header-nav-img" src="./img-journeys/camping-dark.svg" alt="Camping Icon"/>
-                    Journeys
+                    <span class="nav-text active-text">Journeys</span>
                 </a>
                 <a href="#" class="header-nav-link">
                     <img class="header-nav-img" src="./img-journeys/commute.svg" alt="Journey Icon"/>
-                    Create Your Journey
+                    <span class="nav-text">Create Your Journey</span>
                 </a>
             </nav>
         </div>
@@ -104,11 +104,11 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="footer-content">
         <div class="footer-content-container">
-            <div class="footer-logo-container">
+            <div class="logo-section">
                 <img class="footer-logo" src="./img-journeys/mode_of_travel.svg" alt="Logo"/>
-                <span>getaway</span>
+                <span class="logo-text">getaway</span>
             </div>
             <div class="footer-contact-container">
                 <span class="footer-contact-follow">Follow Us</span>
@@ -123,12 +123,13 @@
                         <img class="footer-follow-img" src="./img-journeys/twitter.svg" alt="Twitter Icon"/>
                     </a>
                 </div>
-            </div>
+            </div>    
         </div>
-
         <!-- Line element -->
-        <div class="footer-divider"></div>
-        <span class="footer-text">© 2024 getaway. All rights reserved.</span>
+        <div class="footer-divider">
+            <div class="footer-line"></div>
+            <span class="footer-text">© 2024 getaway. All rights reserved.</span>
+        </div>
     </footer>
 
 </body>
